# geoflux

./: .gitignore  README.md  pyproject.toml
notebooks/: notebook.ipynb
src/geoflux/: __init__.py  geoflux.py
