[project]
name = "geoflux"
version = "0.1.0"
description = ""
authors = [
    {name = "tuyenrss",email = "tuyenmassey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.3,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "geoflux", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
